Removed margin from post info img so title text would wrap correctly

--- a/less/app.less
+++ b/less/app.less
@@ -179,8 +179,7 @@ header h1.title {
   float:                      left;
   max-width:                  @post-thumb-max-width;
   height:                     auto;
-  margin-bottom:              10px;
-  margin-right:               20px;
+  margin:                     0;
 }
 
 .post {
@@ -196,7 +195,7 @@ header h1.title {
   clear:                      both;
 }
 
- .post-info {
+.post-info {
    margin-left:               @post-info-margin; 
  }
 
@@ -309,15 +308,15 @@ div.block {
   margin-bottom:            20px;
 }
 
-  .navbar .navbar-nav {
-    display:                inline-block;
-    float:                  none;
-    vertical-align:         top;
-  }
+.navbar .navbar-nav {
+  display:                  inline-block;
+  float:                    none;
+  vertical-align:           top;
+}
 
-  .navbar .navbar-collapse {
-    text-align:             center;
-  }
+.navbar .navbar-collapse {
+  text-align:               center;
+}
 
 @media (min-width: 992px) {
 
